--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>Jogo da velha Javascript</p>
                 <br>
                 <img src="imagens/Jogo da velha.png" class="img-projetos" alt="Jogo da velha">
-                <p><a href="">Clique aqui</a> para conferir o jogo da velha.</p>
+                <p><a href="https://viniciusfalcao.github.io/Jogo-da-velha/">Clique aqui</a> para conferir o jogo da velha.</p>
 
 
             </li>
