--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             </li>
             <li>
-                <p>Codificador/Decodificador  Javascript</p>
+                <p id="descriçao-2">Codificador/Decodificador Javascript</p>
                 <img src="imagens/encriptador JS.png" class="img-projetos" alt="App de criptografia">
                 <p><a href="https://viniciusfalcao.github.io/Encriptador-Javascript/">Clique aqui</a> para conferir o app criptografico.</p>
 
