--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </li>
             <li>
                 <p id="descriçao-2">App de Criptografia</p><br>
-                <img src="imagens/encriptador JS.png" class="img-projetos" alt="App de criptografia">
+                <img src="imagens/app responsivo.png" class="img-projetos" alt="App de criptografia">
                 <p><a href="https://viniciusfalcao.github.io/Encriptador-Javascript/">Clique aqui</a> para conferir o app criptografico.</p>
 
 
